--- a/static/css/toggle.css
+++ b/static/css/toggle.css
@@ -2,26 +2,21 @@
 .toggle {
   border-radius: 1.5rem !important;
   background-color: #daeaf6;
-  -webkit-box-shadow: 3px 3px 8px #b8b9be, -3px -3px 8px #daeaf6 !important;
-          box-shadow: 3px 3px 8px #b8b9be, -3px -3px 8px #daeaf6 !important;
+  box-shadow: 3px 3px 8px #b8b9be, -3px -3px 8px #daeaf6 !important;
 }
-
 .toggle.btn {
   min-height: 1.8rem !important;
 }
-
 .toggle .toggle-group .btn {
   padding-top: 0rem !important;
   padding-bottom: 0rem !important;
 }
-
 .toggle .toggle-group .btn.toggle-handle {
   border-radius: 1rem;
-  padding: 0.8500rem !important;
+  padding: 0.85rem !important;
   background-color: transparent;
   border: 0;
 }
-
 .toggle .toggle-group .btn-success {
   font-size: 1.1rem;
   padding-right: 1rem !important;
@@ -29,11 +24,9 @@
   color: #28a745 !important;
   background-color: #daeaf6 !important;
 }
-
 .toggle .toggle-group .btn-success:hover {
   background: transparent;
 }
-
 .toggle .toggle-group .btn-danger {
   font-size: 1.1rem;
   padding-right: 1rem !important;
@@ -67,5 +60,4 @@
   color: #fff;
   background-color: transparent !important;
   border-color: #bd2130;
-}
-/*# sourceMappingURL=toggle.css.map */
+}/*# sourceMappingURL=toggle.css.map */
